force-app/main/default/objects/CampaignMember/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Contact account name or lead company name.</description>
    <formula>IF( null != ContactId , Contact.Account.Name , Lead.Company)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzTechField_Company</label>
    <type>Text</type>
</CustomField>