force-app/main/default/objects/CampaignMember/fields/Date_chargement_VF__c.field-meta.xml
<CustomField>
    <fullName>Date_chargement_VF__c</fullName>
    <label>Date chargement VF</label>
    <type>DateTime</type>
</CustomField>