force-app/main/default/objects/CampaignMember/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Renvoie l&apos;email du contact ou du lead.</description>
    <formula>IF( null != ContactId , Contact.Email , Lead.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzTechField_Email</label>
    <type>Text</type>
</CustomField>