force-app/main/default/objects/CampaignMember/fields/MembreExistant__c.field-meta.xml
<CustomField>
    <fullName>MembreExistant__c</fullName>
    <description>Vérifie si la date de chargement VF est nulle ou strictement inférieure à la date de dernière modification.</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzTechField_MembreExistant</label>
    <type>Checkbox</type>
</CustomField>