force-app/main/default/objects/CampaignMember/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Nom complet</description>
    <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzTechField_Name</label>
    <type>Text</type>
</CustomField>