force-app/main/default/objects/CampaignMember/fields/Reprise_LOT2015__c.field-meta.xml
<CustomField>
    <fullName>Reprise_LOT2015__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reprise LOT2015</label>
    <type>Checkbox</type>
</CustomField>