force-app/main/default/objects/CampaignMember/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title du contact ou du lead.</description>
    <formula>IF( null != ContactId , Contact.Title, Lead.Title )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzTechField_Title</label>
    <type>Text</type>
</CustomField>