force-app/main/default/objects/CampaignMember/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type: Contact ou Piste</description>
    <formula>IF( null != ContactId , &apos;Contact&apos; , &apos;Piste&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzTechField_Type</label>
    <type>Text</type>
</CustomField>